# scarlet-hydrangea

./: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  .gitignore  ARCHITECTURE.md  QUICK_START.md  README.md  pyproject.toml  run.py
backend/app/api/: __init__.py  health.py
backend/app/crud/: __init__.py
backend/app/schemas/: __init__.py
backend/src/: __init__.py  config.py  extensions.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: README.md  index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  Loading.jsx  Navbar.jsx  StatusBadge.jsx  ToolCard.jsx  index.js
frontend/src/lib/: api.js
frontend/src/mock/: index.js  tools.mock.js
frontend/src/pages/: Home.jsx  ToolDetail.jsx  ToolsList.jsx
