[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.2.1",
    "flask-migrate>=4.0.5",
    "flask-jwt-extended>=4.5.3",
]
